@startuml
class Game
{
    - float budget
    - state current_state
    - std::vector<GenericWindow*> windows;
    - ListWindow<Stock>* pAssets
    - ...

    + setBudget()
    + getBudget()
    + run()
    - travel()
    - process_travel()
    - buy()
    - sell()
    - go_back_to_main_window()
    - go_to_wrong_amount()
}

note right of Game::windows
All created windows are stored hear
Used for rendering
Also needed for clean up
end note

note right of Game::pAssets
Store pointers to each window 
I need to access directly
end note

enum state
{
    SELECT
    TRAVEL
    BUY
    SELL
    MESSAGE
}

state -* Game

Game <|-- System

class System
{
    - vector<window_loc> windows
    - Canvas* pCanvas
    + addWindow(window_loc data)
    + removeLastWindow()
    + draw()
    + {abstract} keyboard_handler()
}

struct window_loc
{
    GenericWindow* pw;
    int x;
    int y;
}

System *- window_loc


abstract GenericWindow
{
    + {abstract} draw(Canvas &c, int x, int y)
}

class Canvas
{
    + render()
    + string[H] canvas
}

System *-- Canvas
window_loc *-- GenericWindow


class Baner
class InputWindow
{
    + int getInput()
}

class DynamicBaner
{
    - float *pnum
}
class Frame
class ListWindow
{
    - vector<Item> items[]
    - int current_item_idx
    + {abstract} navigate(char)
    + add(Item*)
    + removeAll()
    + Item* getCurrentItem()
    + draw(Canvas &c, int x, int y) 
    + updatePrices()
}
Frame <|-- ListWindow
Baner <|-- InputWindow
Baner <|-- DynamicBaner
Frame <|-- Baner
GenericWindow <|-- Frame

abstract Item
{
    - String name
    - float price
    - float price_min
    - float price_max
    + getPrice()
    + getName()
    + setPriceRange()
    + updatePrice()
}
class Stock
{
    - int quantity
    + getQty()
    + setQty()
    + buy(int n)
    + sell(int n)
}
class Ticket
{
    
}
Item <|-- Stock
Item <|-- Ticket

ListWindow *- Item
@enduml
